feat: add comprehensive code quality setup
- Add Husky for git hooks management
- Configure ESLint with TypeScript support
- Set up Prettier for consistent code formatting
- Add Jest testing configuration for frontend and backend
- Implement lint-staged for pre-commit checks
- Add commitlint for conventional commit messages
- Create EditorConfig for consistent editor settings
- Add comprehensive code quality documentation
- Set up pre-commit and pre-push hooks for quality gates

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,29 @@ NODE_ENV=development
 PORT=3001
 FRONTEND_URL=http://localhost:3000
 
-# Supabase
+# Database
+DATABASE_URL=your_supabase_database_url
 SUPABASE_URL=your_supabase_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# JWT
+JWT_SECRET=your_jwt_secret
+
+# Stripe
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# PayPal
+PAYPAL_CLIENT_ID=your_paypal_client_id
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret
+PAYPAL_BASE_URL=https://api-m.sandbox.paypal.com  # Para producción: https://api-m.paypal.com
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=your_paypal_client_id
 
 # Solana
 SOLANA_RPC_URL=https://api.devnet.solana.com
