fix: add missing supabase import in PaymentController and configure shared ESLint
- Add missing supabase import in PaymentController.ts to resolve TypeScript error
- Add shared directory to workspaces in root package.json
- Install TypeScript ESLint dependencies in shared directory
- Create proper .eslintrc.json configuration for shared directory
- Update lint-staged to run ESLint from shared directory context
- Ensure all monorepo packages have consistent ESLint setup

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "workspaces": [
     "frontend",
     "backend",
+    "shared",
     "smart-contracts"
   ],
   "scripts": {
@@ -73,8 +74,8 @@
       "cd backend && npx prettier --write"
     ],
     "shared/**/*.{js,jsx,ts,tsx}": [
-      "npx eslint --fix",
-      "npx prettier --write"
+      "cd shared && npx eslint --fix",
+      "cd shared && npx prettier --write"
     ],
     "*.{json,css,md}": [
       "prettier --write"
