--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,27 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "@typescript-eslint/recommended"],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "no-unused-vars": "off",
     "no-console": "warn",
     "prefer-const": "error",
     "no-var": "error"
-  },
-  "env": {
-    "browser": true,
-    "es6": true,
-    "node": true
   }
 }
