--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.16",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
+    "language-subtag-registry": "^0.3.23",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "node-fetch": "^2.7.0",
