--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "fastq": "^1.19.1",
+    "language-subtag-registry": "^0.3.23",
     "postcss": "^8.5.6",
     "run-parallel": "^1.2.0",
     "tailwindcss": "^4.1.11"
