fix(scripts): skip smart contracts test in main test script
- Remove test:contracts from main test script since Anchor is not installed
- Keep test:contracts available as separate script for when Anchor is set up
- Add test:all script that includes contracts for future use
- Resolves pre-push hook failure due to missing anchor command

--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
     "deploy:contracts": "cd smart-contracts && anchor deploy",
-    "test": "npm run test:frontend && npm run test:backend && npm run test:contracts",
+    "test": "npm run test:frontend && npm run test:backend",
     "test:frontend": "cd frontend && npm test",
     "test:backend": "cd backend && npm test",
     "test:contracts": "cd smart-contracts && anchor test",
+    "test:all": "npm run test:frontend && npm run test:backend && npm run test:contracts",
     "lint": "npm run lint:frontend && npm run lint:backend",
     "lint:frontend": "cd frontend && npm run lint",
     "lint:backend": "cd backend && npm run lint",
