--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "smart-contracts"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "cleanup": "chmod +x scripts/cleanup-dev.sh && ./scripts/cleanup-dev.sh",
+    "dev": "npm run cleanup && concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
+    "dev:raw": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
