--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,12 @@ target/
 out/
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
 .env.production.local
-.env.*.local
+# .env.*.local
 
 # Logs
 npm-debug.log*
