--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@solana/web3.js": "^1.87.6",
     "@supabase/supabase-js": "^2.38.4",
+    "@types/node-fetch": "^2.6.11",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,7 +27,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "stripe": "^14.9.0",
     "winston": "^3.11.0"
   },
